@@ -110,6 +110,23 @@ enum beng_translation_command {
      * location of the error document.
      */
     TRANSLATE_ERROR_DOCUMENT = 63,
+
+    /**
+     * Response: causes beng-proxy to submit the same translation
+     * request again, with this packet appended.  The current response
+     * is remembered, to be used when the second response contains the
+     * PREVIOUS packet.
+     *
+     * Request: repeated request after CHECK was received.  The server
+     * may respond with PREVIOUS.
+     */
+    TRANSLATE_CHECK = 64,
+
+    /**
+     * Tells beng-proxy to use the resource address of the previous
+     * translation response.
+     */
+    TRANSLATE_PREVIOUS = 65,
 };
 
 struct beng_translation_header {
