@@ -67,6 +67,8 @@ TRANSLATE_UNTRUSTED_PREFIX = 60
 TRANSLATE_SECURE_COOKIE = 61
 TRANSLATE_FILTER_4XX = 62
 TRANSLATE_ERROR_DOCUMENT = 63
+TRANSLATE_CHECK = 64
+TRANSLATE_PREVIOUS = 65
 
 HEADER_FORWARD_NO = 0
 HEADER_FORWARD_YES = 1
